--- a/_sources/vect.ipynb
+++ b/_sources/vect.ipynb
@@ -2,7 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Représentation vectorielle des signaux"
    ]
@@ -11,6 +15,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    },
     "tags": [
      "remove-cell"
     ]
@@ -25,7 +32,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "Un signal qui est échantillonné et à temps limité (c'est-à-dire nul ou non défini en dehors d'un intervalle) peut tout simplement se représenter par une séquence finie de valeurs numériques. Dans le cas d'un signal $x$ défini sur $N$ échantillons, le signal est équivalent à un vecteur :\n",
     "\n",
@@ -46,7 +57,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "<div class=\"example\">\n",
     "\n",
@@ -81,6 +96,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    },
     "tags": [
      "remove-cell"
     ]
@@ -174,7 +192,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Quelques définitions\n",
     "\n",
@@ -306,7 +328,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Décomposition sur une base\n",
     "\n",
