--- a/_sources/energie-puissance.ipynb
+++ b/_sources/energie-puissance.ipynb
@@ -2,7 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Énergie et puissance\n",
     "\n",
@@ -11,7 +15,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "## Énergie d'un signal\n",
     "\n",
@@ -24,7 +32,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Puissance d'un signal\n",
     "\n",
@@ -43,6 +55,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Diaporama",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
