--- a/_sources/python.ipynb
+++ b/_sources/python.ipynb
@@ -64,7 +64,7 @@
     "  \n",
     "### Cellules Markdown\n",
     "\n",
-    "Il est possible de canger une cellule de « code » en cellule « markdown » en sélectionnant _Markdown_ dans la liste déroulante de la barre d'outils.\n",
+    "Il est possible de changer une cellule de « code » en cellule « markdown » en sélectionnant _Markdown_ dans la liste déroulante de la barre d'outils.\n",
     "Le [Markdown](https://en.wikipedia.org/wiki/Markdown) est aussi un langage informatique, mais il sert à mettre en forme du texte (par exemple en écrivant des titres, des listes, des équations...).\n",
     "Cela peut être utile pour ajouter des notes et commenter votre code et ses résultats.\n",
     "\n",
@@ -99,6 +99,8 @@
     "* $\\varphi$ est le _déphasage_\n",
     "\n",
     "</div>\n",
+    "\n",
+    "---\n",
     "\n",
     "Vous trouverez le résumé de la syntaxe Markdown sur [cette page](https://en.wikipedia.org/wiki/Markdown#Example).\n",
     " \n",
