--- a/_sources/props-fourier.ipynb
+++ b/_sources/props-fourier.ipynb
@@ -6,13 +6,13 @@
    "source": [
     "# Propriétés des transformations de Fourier\n",
     "\n",
-    "... et phénomène de Gibbs\n",
+    "<!-- ... et phénomène de Gibbs\n",
     "\n",
     "peut être, pour la table des matières, faire deux chapitre :\n",
     "1. Transformations de Fourier (juste l'aspect mathématique et calculatoire)\n",
     "2. Analyse de Fourier (comprendre les fréquences, propriétés, temps-fréquence)\n",
     "\n",
-    "Le seul intérêt est d'avoir un emploi du temps plus clair car il est contruit sur les chapitres."
+    "Le seul intérêt est d'avoir un emploi du temps plus clair car il est contruit sur les chapitres. -->"
    ]
   }
  ],
