--- a/_sources/vect.ipynb
+++ b/_sources/vect.ipynb
@@ -338,20 +338,20 @@
     "\n",
     "Parfois, il est intéressant de représenter les signaux dans une autre base que la base canonique : on parle alors de _décomposition_ ou de _projection_ d'un signal $x$ sur une base.\n",
     "La transformée de Fourier peut être vue comme la décomposition de signaux dans une autre base.\n",
-    "De même, les techniques de compression (audio, image ou vidéo) utilisent adtucieusement une décomposition dans une base particulière pour réduire le poids des données.\n",
+    "De même, les techniques de compression (audio, image ou vidéo) utilisent astucieusement une décomposition dans une base particulière pour réduire le poids des données.\n",
     "Les coefficients du signal dans cette nouvelle base vont donc être différent des coefficients de la base canonique.\n",
     "\n",
-    "La décomposition d'un signal $x$ de taille $N$ dans une base orthonormée $\\{\\varphi_k\\}$, et donc le calcul des nouveaux coefficients $\\alpha'_k$, s'obtient en calculant le produit scalaire de $x$ avec chaque élément $\\varphi_k$ de la base :\n",
+    "La décomposition d'un signal $x$ de taille $N$ dans une base orthonormée $\\{\\varphi_k\\}$, et donc le calcul des nouveaux coefficients $\\alpha_k$, s'obtient en calculant le produit scalaire de $x$ avec chaque élément $\\varphi_k$ de la base :\n",
     "\n",
     "$$\n",
     "  \\forall k \\in \\{0,\\dots,N-1\\},\\quad\n",
-    "  \\alpha'_k = \\langle x, \\varphi_k \\rangle.\n",
+    "  \\alpha_k = \\langle x, \\varphi_k \\rangle.\n",
     "$$\n",
     "\n",
-    "La _reconstruction_ du signal $x$ consiste à réécrire le signal dans la base canonique depuis la base $\\{\\varphi_k\\}$. Pour cela, le signal $x$ s'obtient par la somme des éléments de la base $\\varphi_k$ pondérés par les coefficients $\\alpha'_k$ :\n",
+    "La _reconstruction_ du signal $x$ consiste à réécrire le signal dans la base canonique depuis la base $\\{\\varphi_k\\}$. Pour cela, le signal $x$ s'obtient par la somme des éléments de la base $\\varphi_k$ pondérés par les coefficients $\\alpha_k$ :\n",
     "\n",
     "$$\n",
-    "  x = \\sum_{k=0}^{N-1} \\alpha'_k \\varphi_k.\n",
+    "  x = \\sum_{k=0}^{N-1} \\alpha_k \\varphi_k.\n",
     "$$"
    ]
   }
@@ -372,7 +372,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.2"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
