--- a/_sources/td5.ipynb
+++ b/_sources/td5.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 📝 Séance du 08/12/2020"
+    "# Séance du 08/12/2020"
    ]
   }
  ],
@@ -24,7 +24,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
