--- a/_sources/fourier.ipynb
+++ b/_sources/fourier.ipynb
@@ -4,26 +4,259 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Transformations de Fourier\n",
+    "# Transformations de Fourier"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Joseph Fourier (1768–1830) a été professeur à l'École Polytechnique, scientifique pendant la campagne de Napoléon en Égypte,\n",
+    "et préfet de l'Isère.\n",
+    "Il a aussi été membre de l'Académie des sciences et de l'Académie française.\n",
     "\n",
-    "## Introduction\n",
+    "En travaillant sur le phénomène de propagation de la chaleur,\n",
+    "il s'aperçut qu'il était utile de représenter la distribution de température dans les matériaux comme une somme de sinusoïdes :\n",
+    "c'est ce qu'on appelle maintenant une décomposition en _série de Fourier_.\n",
+    "La série de Fourier, et les autres transformations qui en découlent,\n",
+    "jouent un rôle capital en traitement du signal\n",
+    "car elles permettent de mettre en évidence les fréquences contenues dans un signal.\n",
     "\n",
-    "vidéo de présentation de J. Fourier.\n",
+    "La vidéo ci-dessous raconte la vie de Joseph Fourier.\n",
     "\n",
-    "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/cYRUlU4Rpu8\" frameborder=\"0\" allow=\"accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>\n",
+    "<p align=\"center\"><iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/cYRUlU4Rpu8\" frameborder=\"0\" allow=\"accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe></p>\n",
     "\n",
-    "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/sJ7j81Nqw6g\" frameborder=\"0\" allow=\"accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>\n",
+    "Cette autre vidéo  se concentre sur les applications actuelles des transformations de Fourier.\n",
     "\n",
+    "<p align=\"center\"><iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/sJ7j81Nqw6g\" frameborder=\"0\" allow=\"accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe></p>\n",
     "\n",
-    "## Transformée de Fourier\n",
-    "\n",
-    "## Transformée de Fourier à temps discret\n",
-    "\n",
+    "Il existe quatre transformations de Fourier, chacune adaptée au type de signal considéré :\n",
+    "- la « série de Fourier » (SF) s'applique aux signaux à temps continu et périodiques,\n",
+    "- la « transformée de Fourier » (TF) s'applique aux signaux à temps continu et apériodiques,\n",
+    "- la « série de Fourier discrète » (SFD) s'applique aux signaux à temps discret et périodiques,\n",
+    "- et la « transformée de Fourier à temps discret » (TFTD) s'applique aux signaux à temps discret et apériodiques."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Série de Fourier\n",
     "\n",
-    "## Transformée de Fourier discrète\n",
+    "Tout signal $x(t)$ à temps continu et périodique de période $T$ peut s'écrire comme une combinaison linéaire\n",
+    "de fonctions $\\exp\\left(j\\frac{2\\pi k t}{T}\\right)$, qui sont elles-mêmes périodiques de période $T$ :\n",
     "\n",
-    "## FFT"
+    "```{margin}\n",
+    "Cette formule est la série de Fourier inverse.\n",
+    "```\n",
+    "\n",
+    "$$\n",
+    "x(t) = \\sum_{k=-\\infty}^{+\\infty} X[k] e^{+j 2 \\pi k t / T}\n",
+    "$$\n",
+    "\n",
+    "```{margin}\n",
+    "Vous remarquerez que le signal temporel $x$ est noté en minuscule,\n",
+    "alors que le signal fréquentiel $X$ est en majuscule.\n",
+    "```\n",
+    "\n",
+    "où $k \\in \\mathbb{Z}$ est la « fréquence » et $X[k]$ sont des coefficients.\n",
+    "L'ensemble de ces coefficients, noté simplement $X$, est la série de Fourier de $x$ ; et c'est aussi un signal.\n",
+    "On montre que les coefficients de la série de Fourier sont définis par :\n",
+    "\n",
+    "```{margin}\n",
+    "Cette formule est la série de Fourier.\n",
+    "```\n",
+    "\n",
+    "$$\n",
+    "X[k] = \\frac{1}{T} \\int_T x(t) e^{-j 2 \\pi k t / T } dt.\n",
+    "$$\n",
+    "\n",
+    "Le terme $k$ est appelé la $k$<sup>e</sup> harmonique.\n",
+    "En particulier, le terme pour $X[1]$ est la première harmonique, que l'on appelle aussi la « composante fondamentale ».\n",
+    "Par ailleurs, le terme pour $k=0$ correspond à la moyenne du signal :\n",
+    "\n",
+    "$$\n",
+    "X[0] = \\frac{1}{T} \\int_T x(t) dt.\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "### Formulation alternative\n",
+    "\n",
+    "Parfois, la série de Fourier de signaux réels est définie comme l'ensemble des coefficients $a_k$ et $b_k$ tels que :\n",
+    "\n",
+    "$$\n",
+    "                                a_0 &= \\frac{1}{T} \\int_0^T x(t) dt \\\\\n",
+    "\\forall k \\in\\mathbb{N}, \\qquad a_k &= \\frac{2}{T} \\int_0^T x(t) \\cos(2 \\pi k t / T) dt \\\\\n",
+    "\\forall k \\in\\mathbb{N}, \\qquad b_k &= \\frac{2}{T} \\int_0^T x(t) \\sin(2 \\pi k t / T) dt\n",
+    "$$\n",
+    "\n",
+    "La relation entre ces coefficients $a_k$ et $b_k$ avec l'expression précédente de la série de Fourier est :\n",
+    "\n",
+    "$$\n",
+    "\\text{si}\\, k<0\\,:\\qquad X[k] &= \\frac{a_{-k}+jb_{-k}}{2} \\\\\n",
+    "\\text{si}\\, k=0\\,:\\qquad X[0] = a_0 \\\\\n",
+    "\\text{si}\\, k>0\\,:\\qquad X[k] = \\frac{a_k-jb_k}{2}\n",
+    "$$\n",
+    "\n",
+    "et la formule de la série de Fourier inverse devient :\n",
+    "\n",
+    "$$\n",
+    "x(t) = a_0 + \\sum_{k=1}^{+\\infty} \\left( a_k \\cos(2 \\pi k t / T) + b_k \\sin(2 \\pi k t / T) \\right).\n",
+    "$$\n",
+    "\n",
+    "Dans le cadre de ce module, nous n'utiliserons pas les formules faisant intervenir $a_k$ et $b_k$\n",
+    "car elles obligent à effectuer deux fois plus de calcul qu'avec les formules précédentes utilisant $X[k]$.\n",
+    "En effet, la formulation avec l'exponentielle complexe regroupe les termes en cosinus et en sinus.\n",
+    "C'est donc plus simple en complexe !"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Transformée de Fourier\n",
+    "\n",
+    "On peut considérer qu'un signal apériodique est le cas limite d'un signal périodique de période infinie.\n",
+    "Dans ce cas, la série de Fourier tend vers la transformée de Fourier :\n",
+    "\n",
+    "```{margin}\n",
+    "Cette formule est la transformée de Fourier.\n",
+    "```\n",
+    "\n",
+    "$$\n",
+    "X(f) = \\int_{-\\infty}^{+\\infty} x(t) e^{-j 2 \\pi f t} dt\n",
+    "$$\n",
+    "\n",
+    "où $f\\in\\mathbb{R}$ est la fréquence.\n",
+    "De même qu'avec la série de Fourier, le signal temporel $x$ peut être reconstruit à partir de $X$ :\n",
+    "\n",
+    "```{margin}\n",
+    "Cette formule est la transformée de Fourier inverse.\n",
+    "```\n",
+    "\n",
+    "$$\n",
+    "x(t) = \\int_{-\\infty}^{+\\infty} X(f) e^{+j 2 \\pi f t} df.\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Série de Fourier discrète\n",
+    "\n",
+    "De même que pour la série de Fourier, un signal à temps discret et périodique de période $N$\n",
+    "peut s'écrire comme la combinaison linéaire de fonctions $\\exp\\left(j\\frac{2\\pi k n}{N}\\right)$,\n",
+    "qui sont également périodiques de période $N$ :\n",
+    "\n",
+    "```{margin}\n",
+    "Cette formule est la série de Fourier discrète inverse.\n",
+    "```\n",
+    "\n",
+    "$$\n",
+    "x[n] = \\sum_{k=0}^{N-1} X[k] e^{+j 2 \\pi k n / T}\n",
+    "$$\n",
+    "\n",
+    "et :\n",
+    "\n",
+    "```{margin}\n",
+    "Cette formule est la série de Fourier discrète.\n",
+    "```\n",
+    "\n",
+    "$$\n",
+    "X[k] = \\sum_{k=0}^{N-1} x[n] e^{-j 2 \\pi k n / T}.\n",
+    "$$\n",
+    "\n",
+    "**Remarque** &ensp; Un signal $x[n]$ à durée limité (donc non défini en dehors de l'intervalle $\\{0,\\dots,N-1\\}$)\n",
+    "peut être vu comme un signal périodique de période $N$.\n",
+    "Il possède donc une série de Fourier discrète qui s'appelle dans ce cas « transformée de Fourier discrète » (TFD).\n",
+    "Comme les signaux que l'on traite sur ordinateur sont toujours à durée limitée,\n",
+    "alors ce sera cette transformée de Fourier discrète qui sera calculée.\n",
+    "Il existe un algorithme très rapide pour la calculer : l'algorithme FFT (implémenté en Python dans la fonction `scipy.fft.fft`)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Représentation\n",
+    "\n",
+    "On l'a vu, les transformations de Fourier $X$ du signal $x$ sont des signaux.\n",
+    "En raison de l'exponentielle complexe dans les formules ci-dessus, $X$ est souvent complexe.\n",
+    "Pour représenter $X$, il faudrait donc se placer dans un espace en trois dimensions dont les axes seraient\n",
+    "la fréquence ($f$ ou $k$), la partie réelle de $X$ et la partie imaginaire de $X$.\n",
+    "Vous conviendrez que ce n'est pas commode de représenter un signal à valeurs complexes sur une feuille ou un écran...\n",
+    "\n",
+    "Pour cette raison, les transformations de Fourier sont représentées à l'aide de deux graphiques :\n",
+    "- le premier représente le module de $X$ en fonction de la fréquence,\n",
+    "- le second représente l'argument de $X$ en fonction de la fréquence.\n",
+    "\n",
+    "L'ensemble de ces deux graphiques s'appelle le « spectre ».\n",
+    "\n",
+    "On peut être surpris que le spectre présente des fréquences « négatives » (à gauche de l'axe des ordonnées).\n",
+    "En fait, il ne s'agit pas de fréquences négatives (cela n'a pas de sens),\n",
+    "mais d'exponentielles complexes tournant en sens opposé aux exponentielles complexes de la partie à droite de l'axe des ordonnées."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Récapitulatif\n",
+    "\n",
+    "Quelle que soit la transformation, on peut donc résumer ainsi les différentes notations utilisées :\n",
+    "\n",
+    "<table>\n",
+    "<thead>\n",
+    "  <tr>\n",
+    "    <td>&emsp;•&ensp;Domaine</td>\n",
+    "    <td>temporel</td>\n",
+    "    <td>\\(\\quad\\xrightarrow{\\;\\mathcal{F}\\;}\\quad\\)</td>\n",
+    "    <td>fréquentiel</td>\n",
+    "  </tr>\n",
+    "</thead>\n",
+    "<tbody>\n",
+    "  <tr>\n",
+    "    <td>&emsp;•&ensp;Signal :</td>\n",
+    "    <td>\\(x\\)</td>\n",
+    "    <td>\\(\\quad\\xrightarrow{\\;\\mathcal{F}\\;}\\quad\\)</td>\n",
+    "    <td>\\(X\\)</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td>&emsp;•&ensp;Variable :</td>\n",
+    "    <td>\\(t\\) ou \\(n\\)</td>\n",
+    "    <td>\\(\\quad\\xrightarrow{\\;\\mathcal{F}\\;}\\quad\\)</td>\n",
+    "    <td>\\(f\\) ou \\(k\\)</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td>&emsp;•&ensp;Exemple d'unité&emsp;</td>\n",
+    "    <td>seconde (s)</td>\n",
+    "    <td>\\(\\quad\\xrightarrow{\\;\\mathcal{F}\\;}\\quad\\)</td>\n",
+    "    <td>s<sup>–1</sup> = hertz (Hz)</td>\n",
+    "  </tr>\n",
+    "</tbody>\n",
+    "</table>\n",
+    "<br>\n",
+    "\n",
+    "Par ailleurs, on remarque que le passage du domaine temporel au domaine fréquentiel utilise une exponentielle du type $e^{-\\theta}$\n",
+    "alors que l'inverse utilise $e^{+\\theta}$, où :\n",
+    "* $\\theta = j 2 \\pi k t / T$ pour la SF,\n",
+    "* $\\theta = j 2 \\pi f t    $ pour la TF,\n",
+    "* $\\theta = j 2 \\pi k n / N$ pour la SFD (ou TFD).\n",
+    "\n",
+    "On retrouve donc toujours le même schéma pour $\\theta$ :\n",
+    "\n",
+    "$$\n",
+    "\\theta = j 2 \\pi \\times \\text{fréquence} \\times \\text{temps} \\times \\text{période éventuelle}\n",
+    "$$\n",
+    "\n",
+    "```{warning}\n",
+    "$t$ et $f$ sont les _variables_ de temps et de fréquence, respectivement.\n",
+    "En revanche, $T$ et son inverse $F=1/T$ sont des _constantes_ représentant la période et la fréquence d'un signal, respectivement.\n",
+    "Ne confondez pas la fréquence $f$ qui est une variable dont dépend $X$\n",
+    "et la fréquence $F$ qui est une constante représentant la fréquence d'un signal périodique $x$ !\n",
+    "\n",
+    "```"
    ]
   }
  ],
