--- a/_sources/tp2.ipynb
+++ b/_sources/tp2.ipynb
@@ -6,6 +6,13 @@
    "source": [
     "# TP du 13/11/2020"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "% analyse de fourier\n"
+   ]
   }
  ],
  "metadata": {
@@ -24,7 +31,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
