--- a/_sources/tp3.ipynb
+++ b/_sources/tp3.ipynb
@@ -6,6 +6,14 @@
    "source": [
     "# TP du 10/12/2020"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "% applications de l'analyse de fourier\n",
+    "% le TP 2 ne parle que de SF et TFD. Le TP3 parle de temps-fréquence, zero padding et échantillonnage"
+   ]
   }
  ],
  "metadata": {
@@ -24,7 +32,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
