--- a/_sources/biblio.ipynb
+++ b/_sources/biblio.ipynb
@@ -59,7 +59,14 @@
     "\n",
     "* [Gretsi](http://www.gretsi.fr/). Groupe de recherche en traitement du signal et des images.\n",
     "\n",
-    "* [Signal Processing Society](https://signalprocessingsociety.org/). Société savante, éditrice notamment de la revue Signal Processing Magazine."
+    "* [Signal Processing Society](https://signalprocessingsociety.org/). Société savante, éditrice notamment de la revue Signal Processing Magazine.\n",
+    "\n",
+    "* [Animations pédagogiques en traitement du signal](http://miv.u-strasbg.fr/mazet/animations/index.html)\n",
+    "\n",
+    "* P. Flandrin, [Le traitement du signal, au cœur de la science et de notre vie quotidienne](https://theconversation.com/le-traitement-du-signal-au-coeur-de-la-science-et-de-notre-vie-quotidienne-84156),\n",
+    "  The Conversation, 2017.\n",
+    "\n",
+    "* B. Van Veen, [Vidéos de traitement numérique du signal](https://www.youtube.com/user/allsignalprocessing)"
    ]
   }
  ],
