--- a/_sources/classification.ipynb
+++ b/_sources/classification.ipynb
@@ -9,7 +9,7 @@
     "La plupart des signaux physiques que l'on mesure sont _analogiques_, c'est-à-dire qu'ils dépendent d'une variable qui prend des valeurs [continues](http://www.educatim.fr/tq/co/Module_TQ_web/co/variable_continue.html) (par exemple, le temps) et qu'eux-mêmes peuvent prendre des valeurs _continues_.\n",
     "On peut citer comme exemple la tension électrique dans un circuit, un son, une mesure de température, etc.\n",
     "\n",
-    "À l'inverse, les signaux traités par un ordinateur sont un ensemble de valeurs qui dépendent donc d'une variable [discrète](http://www.educatim.fr/tq/co/Module_TQ_web/co/variable_discrete.html), et de plus les amplitudes du signal sont également discrètes. Ces signaux sont _numériques_. On peut citer comme exemple une photographie numérique qui est constituée de pixels dont les intensités ne peuvent prendre que 255<sup>8</sup> = 16&nbsp;581&nbsp;375 valeurs.\n",
+    "À l'inverse, les signaux traités par un ordinateur sont un ensemble de valeurs qui dépendent donc d'une variable [discrète](http://www.educatim.fr/tq/co/Module_TQ_web/co/variable_discrete.html), et de plus les amplitudes du signal sont également discrètes. Ces signaux sont _numériques_. On peut citer comme exemple une photographie numérique qui est constituée de pixels dont les intensités ne peuvent prendre que 255<sup>3</sup> = 16&nbsp;581&nbsp;375 valeurs.\n",
     "\n",
     "Un signal numérique est à la fois _échantillonné_ (c'est-à-dire qu'il dépend d'une variable discrète) et _quantifié_ (ses amplitudes sont discrètes).\n",
     "\n",
@@ -19,7 +19,13 @@
     "\n",
     "Quelques remarques :\n",
     "* sur un ordinateur, on ne peut donc traiter que des signaux numériques car la précision des valeurs du signal est limitée et que l'acquisition du signal se fait à une fréquence définie. En plus, ces signaux sont de durée limitée car la mémoire de l'ordinateur ne permet d'enregistrer qu'un nombre fini de valeurs.\n",
-    "* un signal peut également être à valeurs complexes, quelle que soit sa classification. La représentation complexe est une représentation mathématique bien pratique car, même si les signaux physiques peuvent être exprimés avec des valeurs réelles, les nombres complexes permettent parfois de manipuler plus simplement les signaux {ref}`[Prandoni 2008, p. 20] <C:biblio>`. C'est le cas par exemple des champs électromagnétiques."
+    "* un signal peut également être à valeurs complexes, quelle que soit sa classification. La représentation complexe est une représentation mathématique bien pratique car, même si les signaux physiques peuvent être exprimés avec des valeurs réelles, les nombres complexes permettent parfois de manipuler plus simplement les signaux {ref}`[Prandoni 2008, p. 20] <C:biblio>`. C'est le cas par exemple des champs électromagnétiques.\n",
+    "\n",
+    "En traitement du signal, on adopte les conventions suivantes :\n",
+    "* les signaux à temps continu sont notés avec des parenthèses et, généralement, la variable $t$, par exemple : $x(t)$.\n",
+    "* les signaux à temps discret (échantillonnés) sont notés avec des crochets et, généralement, la variable $n$,\n",
+    "  par exemple : $x[n]$.\n",
+    "  En plus, la variable $n$ ne prend que des valeurs entières ($n \\in \\mathbb{Z}$)."
    ]
   }
  ],
