--- a/_sources/fourier.ipynb
+++ b/_sources/fourier.ipynb
@@ -44,7 +44,7 @@
     "## Série de Fourier\n",
     "\n",
     "Tout signal $x(t)$ à temps continu et périodique de période $T$ peut s'écrire comme une combinaison linéaire\n",
-    "de fonctions $\\exp\\left(j\\frac{2\\pi k t}{T}\\right)$, qui sont elles-mêmes périodiques de période $T$ :\n",
+    "de fonctions $\\exp\\left(j 2\\pi k t/T\\right)$, qui sont elles-mêmes périodiques de période $T$ :\n",
     "\n",
     "```{margin}\n",
     "Cette formule est la série de Fourier inverse.\n",
@@ -94,8 +94,8 @@
     "\n",
     "$$\n",
     "\\text{si}\\, k<0\\,:\\qquad X[k] &= \\frac{a_{-k}+jb_{-k}}{2} \\\\\n",
-    "\\text{si}\\, k=0\\,:\\qquad X[0] = a_0 \\\\\n",
-    "\\text{si}\\, k>0\\,:\\qquad X[k] = \\frac{a_k-jb_k}{2}\n",
+    "\\text{si}\\, k=0\\,:\\qquad X[0] &= a_0 \\\\\n",
+    "\\text{si}\\, k>0\\,:\\qquad X[k] &= \\frac{a_k-jb_k}{2}\n",
     "$$\n",
     "\n",
     "et la formule de la série de Fourier inverse devient :\n",
@@ -107,7 +107,7 @@
     "Dans le cadre de ce module, nous n'utiliserons pas les formules faisant intervenir $a_k$ et $b_k$\n",
     "car elles obligent à effectuer deux fois plus de calcul qu'avec les formules précédentes utilisant $X[k]$.\n",
     "En effet, la formulation avec l'exponentielle complexe regroupe les termes en cosinus et en sinus.\n",
-    "C'est donc plus simple en complexe !"
+    "C'est donc plus simple en complexe ! 😎"
    ]
   },
   {
@@ -276,7 +276,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
