--- a/_sources/python.ipynb
+++ b/_sources/python.ipynb
@@ -162,9 +162,6 @@
    "source": [
     "# Une ligne qui commence par le symbole # est un commentaire et n'est donc pas exécutée\n",
     "\n",
-    "# Import du module math\n",
-    "import math\n",
-    "\n",
     "# Import du module 'numpy', que l'on utilisera dans la suite du code 'np' pour faire plus court\n",
     "import numpy as np\n",
     "\n",
@@ -178,7 +175,7 @@
     "f = 4\n",
     "\n",
     "# Calcul de la sinusoïde\n",
-    "x = np.sin(2*math.pi*f*n)\n",
+    "x = np.sin(2*np.pi*f*n)\n",
     "\n",
     "# Création d'une figure\n",
     "plt.figure()\n",
