--- a/_sources/tp1.ipynb
+++ b/_sources/tp1.ipynb
@@ -46,7 +46,6 @@
    "source": [
     "# Importation de modules nécessaires\n",
     "# Pour les modules dont le nom est un peu long, on peut leur donner un nom plus cours avec `as`\n",
-    "import math\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -57,7 +56,7 @@
     "f = 0.3\n",
     "\n",
     "# Sinusoïde : c'est tout simple, il suffit d'écrire l'expression mathématique 😎\n",
-    "w = np.sin(2*math.pi*f*t)\n",
+    "w = np.sin(2*np.pi*f*t)\n",
     "\n",
     "# Affichage du signal\n",
     "plt.plot(t,w)\n",
