--- a/_sources/fourier.ipynb
+++ b/_sources/fourier.ipynb
@@ -85,9 +85,9 @@
     "Parfois, la série de Fourier de signaux réels est définie comme l'ensemble des coefficients $a_k$ et $b_k$ tels que :\n",
     "\n",
     "$$\n",
-    "                                a_0 &= \\frac{1}{T} \\int_0^T x(t) dt \\\\\n",
-    "\\forall k \\in\\mathbb{N}, \\qquad a_k &= \\frac{2}{T} \\int_0^T x(t) \\cos(2 \\pi k t / T) dt \\\\\n",
-    "\\forall k \\in\\mathbb{N}, \\qquad b_k &= \\frac{2}{T} \\int_0^T x(t) \\sin(2 \\pi k t / T) dt\n",
+    "                                  a_0 &= \\frac{1}{T} \\int_0^T x(t) dt \\\\\n",
+    "\\forall k \\in\\mathbb{N}^*, \\qquad a_k &= \\frac{2}{T} \\int_0^T x(t) \\cos(2 \\pi k t / T) dt \\\\\n",
+    "\\forall k \\in\\mathbb{N}^*, \\qquad b_k &= \\frac{2}{T} \\int_0^T x(t) \\sin(2 \\pi k t / T) dt\n",
     "$$\n",
     "\n",
     "La relation entre ces coefficients $a_k$ et $b_k$ avec l'expression précédente de la série de Fourier est :\n",
@@ -195,7 +195,15 @@
     "\n",
     "On peut être surpris que le spectre présente des fréquences « négatives » (à gauche de l'axe des ordonnées).\n",
     "En fait, il ne s'agit pas de fréquences négatives (cela n'a pas de sens),\n",
-    "mais d'exponentielles complexes tournant en sens opposé aux exponentielles complexes de la partie à droite de l'axe des ordonnées."
+    "mais d'exponentielles complexes tournant en sens opposé aux exponentielles complexes de la partie à droite de l'axe des ordonnées.\n",
+    "\n",
+    "```{figure} _static/figs/negative-freqs.png\n",
+    "---\n",
+    "height: 200px\n",
+    "name: F:fourier:freqs-neg\n",
+    "---\n",
+    "Illustration des exponentielles complexes associées à l'axe des fréquences d'un spectre.\n",
+    "```"
    ]
   },
   {
