--- a/_sources/props-fourier.ipynb
+++ b/_sources/props-fourier.ipynb
@@ -10,7 +10,11 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "remove-cell"
+    ]
+   },
    "outputs": [],
    "source": [
     "from myst_nb import glue\n",
