--- a/_sources/fourier.ipynb
+++ b/_sources/fourier.ipynb
@@ -154,7 +154,7 @@
     "```\n",
     "\n",
     "$$\n",
-    "x[n] = \\sum_{k=0}^{N-1} X[k] e^{+j 2 \\pi k n / T}\n",
+    "x[n] = \\sum_{k=0}^{N-1} X[k] e^{+j 2 \\pi k n / N}\n",
     "$$\n",
     "\n",
     "et :\n",
@@ -164,7 +164,7 @@
     "```\n",
     "\n",
     "$$\n",
-    "X[k] = \\sum_{k=0}^{N-1} x[n] e^{-j 2 \\pi k n / T}.\n",
+    "X[k] = \\sum_{k=0}^{N-1} x[n] e^{-j 2 \\pi k n / N}.\n",
     "$$\n",
     "\n",
     "**Remarque** &ensp; Un signal $x[n]$ à durée limité (donc non défini en dehors de l'intervalle $\\{0,\\dots,N-1\\}$)\n",
@@ -172,7 +172,7 @@
     "Il possède donc une série de Fourier discrète qui s'appelle dans ce cas « transformée de Fourier discrète » (TFD).\n",
     "Comme les signaux que l'on traite sur ordinateur sont toujours à durée limitée,\n",
     "alors ce sera cette transformée de Fourier discrète qui sera calculée.\n",
-    "Il existe un algorithme très rapide pour la calculer : l'algorithme FFT (implémenté en Python dans la fonction `scipy.fft.fft`)."
+    "Il existe un algorithme très rapide pour la calculer : l'algorithme FFT (implémenté en Python dans la fonction `numpy.fft.fft`)."
    ]
   },
   {
@@ -284,7 +284,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.2"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
