--- a/_sources/td-fourier.ipynb
+++ b/_sources/td-fourier.ipynb
@@ -40,7 +40,7 @@
     "  $$\n",
     "  z[n] =\n",
     "    \\begin{cases}\n",
-    "      A   &\\text{si}\\, -\\frac{N}{2} \\leq n < \\frac{N}{2}, \\qquad\\text{(attention :}\\, z\\left[\\frac{N}{2}\\right] = 0}\\\\\n",
+    "      A   &\\text{si}\\, -\\frac{N}{2} \\leq n < \\frac{N}{2}, \\qquad\\text{(attention :}\\, z\\left[\\frac{N}{2}\\right] = 0)\\\\\n",
     "      0   &\\text{sinon}.\n",
     "    \\end{cases}\n",
     "  $$"
@@ -305,7 +305,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
