--- a/_sources/tp2.ipynb
+++ b/_sources/tp2.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "avec $A=1$ et $T = 1$.\n",
     "\n",
-    "* Tracez avec Matlab la série de Fourier de ce signal (qui a été calculée en TD),\n",
+    "* Tracez avec Python la série de Fourier de ce signal (qui a été calculée en TD),\n",
     "  c'est-à-dire le spectre d'amplitude et de phase de $y$, pour $k$ allant de $-10$ à $10$.\n",
     "\n",
     "On souhaite maintenant reconstruire le signal temporel en ne considérant que les $K$ premières harmoniques.\n",
